namespace DSC.Data.Models
{
    public class CpcCode
    {
        public string Code { get; set; } = string.Empty;
        public string? Description { get; set; }
    }
}
